--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,7 @@
 {
-    "short_name": "Oritsuru",
-    "name": "Oritsuru Sushi",
+    "short_name": "Portfolio",
+    "name": "Damian Gonzalez",
     "icons": [
-        {
-            "src": "favicon.svg",
-            "sizes": "192x192",
-            "type": "image/svg+xml"
-        },
         {
             "src": "favicon.png",
             "type": "image/png",
