--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^3.1.0",
+    "@astrojs/vercel": "^3.2.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "astro": "^2.1.2",
+    "astro": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7"
