--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,19 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@cv": [
+        "./cv.json"
+      ],
+      "@cv-eng": [
+        "./cv-eng.json"
+      ],
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "extends": "astro/tsconfigs/base"
 }
