--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "astro/tsconfigs/base",
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
@@ -14,7 +15,7 @@
     "baseUrl": ".",
     "paths": {
       "@cv": [
-        "./cv.json"
+        "./src/cv.json"
       ],
       "@cv-eng": [
         "./cv-eng.json"
@@ -24,5 +25,4 @@
       ]
     }
   },
-  "extends": "astro/tsconfigs/base"
 }
