update image links

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,15 @@
       ],
       "@/*": [
         "src/*"
+      ],
+      "@p/*": [
+        "./public/*"
       ]
-    }
+    },
+    "plugins": [
+			{
+				"name": "@astrojs/ts-plugin"
+			}
+		]
   },
 }
