--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "astro": "^4.9.2",
+    "ninja-keys": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7"
