add About printable portfolio section

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "./src/cv.json"
       ],
       "@cv-eng": [
-        "./cv-eng.json"
+        "./src/cv-eng.json"
       ],
       "@/*": [
         "src/*"
